src/css/style.css
* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-tap-highlight-color: transparent; /* For some Androids */
  box-sizing: border-box;
}

html,
body {
  font-family: courier, sans-serif;
  background-color: red;
  color: white;
  font-size: 1em;
  letter-spacing: 0px;
  text-transform: lowercase;
}

a:link {
  color: white;
  text-decoration: none;
}
a:visited {
  color: white;
  text-decoration: none;
}
a:active {
  color: white;
  text-decoration: none;
}
a:hover {
  background: white;
  color: red;
}
a.no-hover:hover {
  background: red;
  color: white;
}
p a:link {
  text-decoration: underline;
}

#banner {
  display: flex;
  flex-direction: column;
}

/* -------------------------------------------------------------------------- */
/* Navbar */

#nav {
  border-style: solid;
  border-left: none;
  border-right: none;
  border-width: 2px;
  display: flex;
  flex-wrap: wrap;
}

#nav > * {
  white-space: nowrap;
}

#nav a {
  margin-right: 2em;
}

#right span a {
  margin-right: 0.5em;
}

@media screen and (max-width: 768px) {
  #nav > * {
    margin-right: 0;
    width: 50%;
  }

  #nav {
    flex-direction: row;
  }

  #left,
  #right {
    display: flex;
    flex-direction: column;
  }
}

/* -------------------------------------------------------------------------- */
/* Main */

#main {
  margin: auto;
  width: 90%;
}

@media screen and (max-width: 768px) {
  #main {
    margin: 1em auto;
    width: 100%;
    overflow-wrap: anywhere;
  }
}

/* -------------------------------------------------------------------------- */
/* Stream Player */

.player {
  display: flex;
}

.player > div {
  line-height: 1em;
  display: flex;
  width: 50%;
  align-items: center;
  padding: 0.5em 1em;
  margin-top: 10px;
  margin-bottom: 10px;
  border: solid;
  border-width: 2px;
  border-radius: 3px;
}

@media screen and (max-width: 768px) {
  .player {
    flex-direction: column;
    padding: 0 1em;
  }
  .player > div {
    margin: 0;
    width: 100%;
  }
}

.metadata {
  grid-area: metadata;
  text-align: center;
}

.metadata > div {
  font-size: 0.75em;
}

.chatbox {
  grid-area: chatbox;
  margin: 0 auto;
  margin-top: 2em;
  width: 100%;
}

.player-controls {
  padding-right: 1em;
}

.location {
  margin-left: auto;
}

#trackName,
#showName {
  overflow-wrap: anywhere;
}

/* chat widget */
.theme--minimal {
  color: white;
  width: 100%;
}

.big-icon {
  font-size: 3em;
  margin-right: 0.5em;
}

.hidden {
  display: none;
  opacity: 0;
}
/* -------------------------------------------------------------------------- */
/* Schedule */

#schedule {
  margin-top: 20px;
}
/* -------------------------------------------------------------------------- */
/* External Widgets */

/* chat widget */
.theme--minimal {
  color: white;
}

/* removes icon from google translate */
img.goog-te-gadget-icon {
  display: none;
}

#google_translate_element {
  position: absolute;
  right: 0px;
}

#paypal-button {
  width: 10em;
}

